# espmerged

./: .gitignore  CLAUDE.md  build_flash.bat  config_demo.html  partitions.csv  push.bat  sdkconfig.defaults
.claude/skills/code-check/: SKILL.md
components/sensors/: CMakeLists.txt  ads1115_fsr402.c  ads1115_fsr402.h  bh1750.c  bh1750.h  fsr402.c  fsr402.h  ky005.c  ky005.h  ky022.c  ky022.h  mq_135.c  mq_135.h  sht31.c  sht31.h  usart.c  usart.h
main/: CMakeLists.txt  afe_wake_word.c  afe_wake_word.h  audio_out.c  audio_out.h  font_gb2312_16.c  font_gb2312_16.h  lcd_ili9488.c  led_strip_driver.c  led_strip_driver.h  main.c  pump_driver.c  pump_driver.h  screen_anim.c  screen_anim.h  sensors.c  sensors.h  wifi.c  ws_client.c  ws_client.h
work/telemetry_server/: package-lock.json  package.json  server.js
